# quake_alert

./: .gitignore  Cargo.toml  README.md  config.example.ron
data/: last_quake  quakes
src/: alert.rs  cache.rs  config.rs  fetch.rs  main.rs  process.rs  util.rs
